# bitt-metronome

./: .gitignore  README.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  metronome_engine.cpp
app/src/main/java/com/velvet/metronome/: MainActivity.kt  MetronomeApplication.kt
app/src/main/java/com/velvet/metronome/audio/: ClickWavGenerator.kt  MetronomeEngine.kt
app/src/main/java/com/velvet/metronome/data/: PresetRepository.kt  SettingsRepository.kt
app/src/main/java/com/velvet/metronome/model/: Preset.kt  TempoConfig.kt
app/src/main/java/com/velvet/metronome/service/: MetronomeService.kt
app/src/main/java/com/velvet/metronome/ui/components/: BeatGrid.kt  BottomBar.kt  LockSlider.kt  PresetTabs.kt  TempoBox.kt
app/src/main/java/com/velvet/metronome/ui/navigation/: NavGraph.kt
app/src/main/java/com/velvet/metronome/ui/screens/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/velvet/metronome/ui/theme/: Color.kt  Fonts.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_metronome_notification.xml  splash_background.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
